--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script> -->
+    <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
   </head>
   <body>
